--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="root"></div>
-  
-    <script src="./app.js" type="module"></script>
+
+    <script src="./src/app.js" type="module"></script>
   </body>
 </html>
